Added Payment Logic and also additional user fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 spring.jpa.hibernate.ddl-auto = update
+
+
+#img bb
+imgbb.url = https://api.imgbb.com/1/upload
+imgbb.apiKey = ${IMGBB_API_KEY}
