--- a/src/main/resources/application-vidhya.properties
+++ b/src/main/resources/application-vidhya.properties
@@ -16,3 +16,6 @@ okta.issuerId = https://dev-510960.okta.com/oauth2/default
 okta.audience = api://default
 okta.clientId = 0oaak70cetfpVsSPq4x6
 okta.usersGroupId = 00gakc31aFaZYW1tY4x6
+
+#Stripe
+stripe.apiKey = ${STRIPE_API_KEY_TUITION}
