--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.jpa.hibernate.ddl-auto = update
 #img bb
 imgbb.url = https://api.imgbb.com/1/upload
 imgbb.apiKey = ${IMGBB_API_KEY}
+
+#mail
+mail.baseUrl = http://localhost:8000
+mail.username = ${TUITION_MAIL_USERNAME}
+mail.host = email-smtp.us-east-2.amazonaws.com
+mail.port = 587
+mail.password = ${TUITION_MAIL_PASSWORD}
+mail.protocol = ${MAIL_PROTOCOL:smtp}
+
+mail.debug = ${MAIL_DEBUG:true}
+mail.from = "Tuition Master"<donotreply@vennoble.com>
