Added Razor Pay Logic

--- a/src/main/resources/application-vidhya.properties
+++ b/src/main/resources/application-vidhya.properties
@@ -19,3 +19,7 @@ okta.usersGroupId = 00gakc31aFaZYW1tY4x6
 
 #Stripe
 stripe.apiKey = ${STRIPE_API_KEY_TUITION}
+
+#RazorPay
+razorpay.apiKey = rzp_test_W7bKwSGX4GDsSZ
+razorpay.apiSecret= ${RAZOR_PAY_SECRET}
